--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "apitareas",
   "version": "1.0.0",
@@ -9,12 +8,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  --prefix client && npm run build -- prefix client"
   },
+  "engines": {
+    "node": "12.4.0"
+  },
   "author": "Gilberto Hernandez",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "cls": "^0.1.5",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "mathjs": "^7.1.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0"
